2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-07-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/Makefile.am: Add bsplib_DATA. Eliminate LIBNAME. Cosmetical
	changes.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* src/Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-10-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rtems++/Makefile.am: Remove.
	* include/Makefile.am: Handle subdirs, require automake-1.5.
	* configure.ac: Reflect changes above.
	* Makefile.am: Require automake-1.5.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-09-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rtems++/Makefile.am: Use 'PREINSTALL_FILES ='.

2001-02-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/rtems++/Makefile.am: Apply include_*HEADERS instead of
	H_FILES.

2001-01-08	Joel Sherrill <joel@OARcorp.com>

	* src/rtemsInterrupt.cc: Allocated interrupt_table since since
	cannot be determined without CPU model information.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-10-25      Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
	Switch to GNU canonicalization.

2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/Makefile.am: Include compile.am
